--- a/src/Css/Footer.css
+++ b/src/Css/Footer.css
@@ -91,6 +91,12 @@ footer img {
     footer .footer-col:nth-child(2) {
         margin: auto 0;
     }
+
+    footer img {
+        margin: auto 0;
+        align-items: center;
+        width: clamp(250px,5vw,300px);
+    }
 }
 
 /********************************************/
