--- a/src/Css/Footer.css
+++ b/src/Css/Footer.css
@@ -16,7 +16,7 @@ footer .center {
 }
 
 .footer-columns {
-    justify-content: center;
+    justify-content: start;
     gap: 2px;
     padding-top: 20px;
     width: 100%;
@@ -29,14 +29,18 @@ footer .center {
 
 .footer-columns .footer-col{
     background-color: #1C1E21;
-    text-align: center;
-    color: #ffff;
+    /* text-align: start; */
+    color: rgba(255, 255, 255, 0.487);
     font-family: var(--font-Mono);
     padding-bottom: 1rem;
 }
 
 .footer-columns .footer-col h3 {
-    padding-bottom: 20px;
+    padding-bottom: 10px;
+    left: 0;
+    color: white;
+    border-bottom: 2px solid rgba(255, 255, 255, 0.487);
+    margin-bottom: 1rem;
 }
 
 .footer-col a{
@@ -46,26 +50,37 @@ footer .center {
     font-family: var(--font-Mono);
 }
 
+
+.footer-col ul {
+    padding-left: 1rem;
+    list-style: disc;
+}
+
+
+
 .footer-col li {
-    padding-left: 10px;
+    /* padding-left: 10px; */
     padding-bottom: 8px;
-    margin: auto;
     width: 80%;
     justify-content: center;
     align-items: center;
     text-align: start;
 }
 
+.footer-col li::before {
+
+    background-color: red; /* Cambiar el color de fondo de los puntos a rojo */
+    content: ''; /* Añade contenido al pseudo-elemento */
+    display: inline-block;/* Espacio entre el punto y el texto */
+}
+
 footer .footer-col {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
+    padding: 0 30px;
 }
-footer img {
-    margin: auto 0;
-    align-items: center;
-    width: clamp(350px,5vw,500px);
-}
+
 
 footer .footer-col:nth-child(1) {
     text-align: justify;
@@ -73,19 +88,37 @@ footer .footer-col:nth-child(1) {
 }
 
 
-
-
-
-
-
-
 .map-ubicacion {
-    margin: 0 auto;
-    text-align: center;
+    margin: 0;
+    text-align: start;
     width: 250px;
     height: 200px;
     background-color: aqua;
 }
+
+.Bn-richardi {
+    display: none;
+    background-color: #323539;
+    color: #A9A9A9;
+    text-align: center;
+    height: 20px;
+    width: 100%;
+}
+
+.Bn-richardi p{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-family: var(--font-Mono);
+    margin-top: 10px;
+    align-items: center;
+    padding: 5px;
+    background-color: #323539;
+    color: #A9A9A9;
+    text-align: center;
+    margin: 0 auto;
+}
+
 
 
 /* VERSION TABLET (790PX)  ***************** */
@@ -104,6 +137,11 @@ footer .footer-col:nth-child(1) {
         padding: 0 30px;
         margin: auto 0;
     }
+
+    .Bn-richardi p {
+        text-align: justify;
+        padding: 0 25px;
+    }
 }
 
 /********************************************/
@@ -120,15 +158,6 @@ footer .footer-col:nth-child(1) {
     }
     footer .footer-col:nth-child(2) {
         text-align: start;
-    }
-
-    footer .footer-col.col2 ul{
-        padding-right: 100px;
-    }
-
-    footer img {
-        width: clamp(220px,5vw,250px);
-        height: clamp(120px,5vw,150px);
     }
 }
 /********************************************/
