--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -100,7 +100,7 @@ header nav ol a:hover {
         }
         
         .menu-burger button img{
-            width: 2.3rem;
+            width: 2rem;
         }
 
         header nav img {
@@ -163,6 +163,10 @@ header nav ol a:hover {
         
         header nav img {
             width: 100px;
+        }
+
+        .menu-burger button img{
+            width: 1.8rem;
         }
         
     }
