--- a/src/Css/Footer.css
+++ b/src/Css/Footer.css
@@ -84,7 +84,6 @@ footer .footer-col {
 
 footer .footer-col:nth-child(1) {
     text-align: justify;
-    padding: 0 30px;
 }
 
 
@@ -138,6 +137,10 @@ footer .footer-col:nth-child(1) {
         margin: auto 0;
     }
 
+    footer .footer-col {
+        width: 70%;
+    }
+
     .Bn-richardi p {
         text-align: justify;
         padding: 0 25px;
@@ -154,10 +157,23 @@ footer .footer-col:nth-child(1) {
 
     footer .footer-col:nth-child(1) {
         text-align: justify;
-        padding: 0 25px;
+        width: 70%;
+        margin: 0 auto;
     }
     footer .footer-col:nth-child(2) {
         text-align: start;
+        width: 70%;
+        margin: 0 auto;
+    }
+    footer .footer-col:nth-child(3) {
+        text-align: start;
+        width: 70%;
+        margin: 0 auto;
+    }
+    footer .footer-col:nth-child(4) {
+        text-align: start;
+        width: 70%;
+        margin: 0 auto;
     }
 }
 /********************************************/
