--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -124,6 +124,7 @@ header nav ol a:hover {
             padding: 0;
             background-color: #1C1E21;
             border-bottom-left-radius: 10px;
+            
             transition: right 0.2s ease;
         }
         
@@ -141,10 +142,12 @@ header nav ol a:hover {
             margin: 0;
             width: 100%-20px;
             font-size: clamp(16px, 5vw, 18px);
+            border-top: 1px solid #5b5d5f2c;
         }
         
         header nav .link-mobile a:nth-child(4){
             padding-bottom: 30px;
+            
         }
         
     }
@@ -158,7 +161,8 @@ header nav ol a:hover {
         header nav .link-mobile {
             width: 100%;
             top: 70px;
-            border-bottom-right-radius: 10px;
+            border-bottom-right-radius: 0;
+            border-bottom-left-radius: 0;
         }
         
         header nav img {
