--- a/src/Css/Container.css
+++ b/src/Css/Container.css
@@ -47,7 +47,7 @@
     font-size: clamp(16px,5vw,22px);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-    button {
+    .btn-solicitar{
     font-size: clamp(16px,5vw,20px);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: none;
@@ -60,10 +60,10 @@
     transition: all .3s ease;
     box-shadow: rgb(201, 103, 46) 0px 5px 0px 0px;
 }   
-   button:hover {
+    .btn-solicitar:hover {
     box-shadow: rgb(155, 70, 30) 0px 4px 0px 0px;
 }
-   button:active {
+    .btn-solicitar:active {
     background-color: hsl(15, 64%, 39%);
     /*50, 168, 80*/
     box-shadow: #86381e;
