--- a/src/Css/Container.css
+++ b/src/Css/Container.css
@@ -170,7 +170,8 @@
   }
 
   .loading-body {
-    background-color: #1C1E21; /* Cambia este color por el que desees */
+    background-color: #1C1E21;
+    z-index: 20000; /* Cambia este color por el que desees */
   }
   .loader-container {
     text-align: center;
