--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   text-align: center;
 } */
 /* 
-.logo {
+.logo { ESTOY PROBANDO SUBIR UN GIT 
   height: 6em;
   padding: 1.5em;
   will-change: filter;
