--- a/src/Css/Container.css
+++ b/src/Css/Container.css
@@ -10,11 +10,10 @@
 
 /* #sct1 {
     height: 100vh;
-} */
+} */ 
 #sct1 img {
     width: 100%;
-    height: auto;
-    overflow: hidden;
+    height: 92vh;
     z-index: -5;
 }
 
@@ -38,23 +37,25 @@
 .sct1texto p, h1 {
     color: #ffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
 .sct1texto h1 {
     font-size: clamp(20px,8vw,45px);
+    
 }
 .sct1texto p {
     margin-top: 5px;
-    font-size: clamp(16px,5vw,18px);
+    font-size: clamp(15px,5vw,16px);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .btn-solicitar{
-    font-size: clamp(16px,5vw,18px);
+    font-size: clamp(15px,5vw,16px);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     border: none;
     background-color: #DC5529;
     color: #ffff;
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 8px 18px;
     cursor: pointer;
     border: 0;
     transition: all .3s ease;
@@ -64,21 +65,27 @@
     box-shadow: rgb(155, 70, 30) 0px 4px 0px 0px;
 }
 .btn-solicitar:active {
-    background-color: hsl(15, 64%, 39%);
+    background-color: rgb(163, 68, 36);
     /*50, 168, 80*/
     box-shadow: #86381e;
     transform: translateY(5px);
     transition: 200ms;
 }
+.btn-solicitar:focus,
+.btn-solicitar:active {
+    outline: none;
+}
 
+.column {
+    flex-direction: column;
+    color: #303030;
+}
 #inicio h2 { 
     display: flex;
-    flex-direction: column;
-    font-size: clamp(20px,8vw,40px);
+    font-size: clamp(20px,8vw,35px);
     width: 90%;
     text-align: center;
     margin: 50px auto;
-    color: #303030;
     font-family: var(--fontMono);
 }
 #inicio h2 span {
@@ -121,6 +128,7 @@
 #sct2 .sect2-card div:hover {
     background-color: #F26E44;
     color: #ffff;
+    transform: scale(1.05);
 }
 #sct2 .sect2-card div:hover p{
     color: #ffff;
@@ -130,10 +138,106 @@
 }
 
 #sct3 {
+    font-family: var(--fontMono);
     margin-top: 50px;
-    height: 800px;
-    background-color: #00628B;        
+    height: auto;
+    background-color: #00628B;     
+    background-image: linear-gradient(to right, rgba(15, 44, 69, 0.683),rgba(107, 64, 23, 0.683)), url(../Img/combinada.png);
+    flex-direction: column;
+    justify-content: center;
+    background-size: cover;
+    background-position: center;
 }
+.sct3-servicios h2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    color: #ffff;
+}
+.sct3-servicios{
+    margin: 0 50px;
+    
+}
+.sct3-servicios .sct3-admin, .sct3-seguridad{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: space-between;
+    padding-bottom: 50px;
+}
+
+
+.sct3-admin h3 {
+    display: inline;
+}
+
+#sct3 h2{
+    padding: 20px;
+    justify-content: center;
+    color: #ffff;
+}
+#sct3 h3 {
+    color: #ffff;
+    font-weight: 700;
+    font-size: 30px;
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    border-top: 2px solid #ffffff49; /* Estilo, grosor y color del borde */
+}
+#sct3 p,h4 {
+    color: #ffff;
+}
+#sct3 p,h4 {
+
+}
+#sct3 .card {
+    border-radius: 2px;
+    border-radius: 2px;
+    width: 22%;
+    height: 200px;
+    border-radius: 2px;
+    background: #00618b84;
+    box-shadow:  2px 2px 4px #005c8390,
+             -2px -2px 4px #00679378;
+    padding: 5px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    text-align: start;
+    padding: 10px;
+    transition: 0.2s ease;
+}
+
+
+#sct3 .card:hover {
+    background: rgba(200, 64, 19, 0.8); /* Color de fondo */
+    box-shadow:  2px 2px 4px rgba(210, 70, 24, 0.6),
+    -2px -2px 4px rgba(210, 70, 24, 0.6); /* Sombra */
+    transform: scale(1.085) rotate(-1deg);
+}
+
+#sct3 .card:hover h4{
+    transform: rotate(1deg); /* Contrarrestar la rotación de la tarjeta */
+    transition: transform 0.1s ease; 
+}
+#sct3 .card:hover p{
+    transform: rotate(1deg); /* Contrarrestar la rotación de la tarjeta */
+    transition: transform 0.1s ease; 
+}
+
+#sct3 .card p {
+    padding-bottom: 15px;
+}
+
+#sct3 .card h4 {
+    text-align: start;
+}
+
+
+
 
 .loader {
     width: 64px;
