--- a/src/Css/Header.css
+++ b/src/Css/Header.css
@@ -132,13 +132,14 @@ header nav ol a:hover {
             background-color: #1C1E21;
             border-bottom-left-radius: 10px;
             
-            transition: right 0.2s ease;
+            transition: right 0.3s ease;
         }
         
         header nav .link-mobile.open {
             right: 0;
             display: flex;
             flex-direction: column;
+            top: 65px;
         }
 
 
