--- a/src/Css/Footer.css
+++ b/src/Css/Footer.css
@@ -98,13 +98,7 @@ footer .footer-col:nth-child(4) {
 }
 
 
-.map-ubicacion {
-    margin: 0;
-    text-align: start;
-    width: 240px;
-    height: 200px;
-    background-color: aqua;
-}
+
 .map-ubicacion a img{
     width: 240px;
     height: 200px;
@@ -167,7 +161,7 @@ footer .footer-col:nth-child(4) {
         text-align: start;
         width: clamp(220px, 5vw, 350px);
         height: clamp(180px, 5vw, 350px);
-        background-color: aqua;
+
     }
 
     
@@ -183,8 +177,8 @@ footer .footer-col:nth-child(4) {
 
     footer .footer-col:nth-child(1) {
         text-align: justify;
-        width: 70%;
-        margin: 0 auto;
+        width: calc(100% - 61px);
+        margin: 0;
     }
     footer .footer-col:nth-child(2) {
         width: 70%;
@@ -198,13 +192,17 @@ footer .footer-col:nth-child(4) {
     }
     footer .footer-col:nth-child(4) {
         text-align: start;
-        width: 70%;
-        margin: 0 auto;
+        width: calc(100% - 60px);
+        margin: 0 ;
     }
 
     .footer-col li{
         width: 100%;
         
+    }
+    .map-ubicacion a img {
+        width: 100%;
+        height: auto;
     }
 }
 /********************************************/
