--- a/src/Css/Footer.css
+++ b/src/Css/Footer.css
@@ -24,6 +24,9 @@ footer .center {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-template-rows: repeat(auto-fill, minmax(300px, 1fr));
 }
+.footer-col p {
+    color: #A9A9A9;
+}
 
 
 
@@ -54,7 +57,6 @@ footer .center {
 }
 
 .col2 {
-    background-color: red;
 }
 
 
@@ -91,9 +93,10 @@ footer .footer-col {
 
 footer .footer-col:nth-child(1) {
     text-align: justify;
+    color: #A9A9A9;
 }
 footer .footer-col:nth-child(4) {
-    text-align: justify;
+    
     width: 260px;
 }
 
@@ -142,7 +145,7 @@ footer .footer-col:nth-child(4) {
     }
     
     footer .footer-col:nth-child(1) {
-        text-align: justify;
+        
         padding: 0 30px;
         margin: auto 0;
     }
@@ -152,7 +155,6 @@ footer .footer-col:nth-child(4) {
     }
 
     .Bn-richardi p {
-        text-align: justify;
         padding: 0 25px;
     }
 
@@ -176,7 +178,6 @@ footer .footer-col:nth-child(4) {
     
 
     footer .footer-col:nth-child(1) {
-        text-align: justify;
         width: calc(100% - 61px);
         margin: 0;
     }
