--- a/src/Css/Footer.css
+++ b/src/Css/Footer.css
@@ -163,8 +163,8 @@ footer .footer-col:nth-child(4) {
         text-align: start;
         width: clamp(220px, 5vw, 350px);
         height: clamp(180px, 5vw, 350px);
-
-    }
+        /* PROBANDO EL GIT */
+    } 
 
     
 }
