--- a/src/Css/Nosotros.css
+++ b/src/Css/Nosotros.css
@@ -73,7 +73,66 @@
     text-align: justify;
 }
 
+#valorSocial {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    justify-content: center;
+    margin: 50px auto;
+}
 
+#valorSocial div{
+    width: 45%;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+}
+
+#valorSocial div h4 {
+    font-family: sans-serif;
+    font-size: 19px;
+    color: #FF6635;
+    padding: 5px 10px;
+    padding-left: 30px;
+    border-bottom: 4px solid #A42800;
+    border-top: 1px solid #a429008f;
+    border-right: 4px solid #A42800;
+    border-left: 1px solid #a429008f;
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.2);
+    margin-bottom: 5px;
+}
+#valorSocial div p {
+    margin-top: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    color: #555555;
+    padding-left: 10px;
+    text-align: justify;
+}
+#valorSocial div .fraseSocial {
+    border: none;
+    box-shadow: none;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+#valorSocial .card1 {
+    display: flex;
+    justify-content: center;
+}
+#valorSocial .card1 p{
+    padding-left: 30px;
+    font-size: 15px;
+}
+
+#valorSocial {
+    background-image: url(../Img/logoCASCO.png);
+    background-position: center;
+    background-size: 40%;
+    background-repeat: no-repeat;
+}
 
 
 
