--- a/src/Css/Nosotros.css
+++ b/src/Css/Nosotros.css
@@ -1,7 +1,8 @@
 
 #nosotros-sect1 {
     color: #303030;
-    background-image: linear-gradient(rgba(31, 7, 0, 0.60), rgba(31, 7, 0, 0.60)), url(../Img/nosotrosPortada.png);
+    background-image: linear-gradient(rgba(31, 7, 0, 0.60), rgba(31, 7, 0, 0.60)), url(../Img/nosotrosportada.jpg);
+    background-position: center;
     margin-top: 65px;
     height: 300px;
     display: flex;
