--- a/src/Css/Contacto.css
+++ b/src/Css/Contacto.css
@@ -19,9 +19,12 @@
 }
 
 #contacto-sect1 h1 {
+    padding: 5px 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.407);
+    border-top: 1px solid rgba(255, 255, 255, 0.407);
     text-align: center;
     font-size: clamp(20px,5vw,40px);
-    font-family: sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #contacto-sect1 h2 {
