--- a/src/Css/Nosotros.css
+++ b/src/Css/Nosotros.css
@@ -20,6 +20,9 @@
     color: #ffff;
 }
 #nosotros-sect1 h1{
+    padding: 5px 0;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.407);
+    border-top: 1px solid rgba(255, 255, 255, 0.407);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: clamp(20px,5vw,40px);
 }
